# cuckoo-hash

./: .gitignore  222.txt  CMakeLists.txt  build.sh  config.cpp  config.txt  exp-combined.sh  gen-data.sh  input.txt  run.sh  slurm-703380.out  slurm-703381.out  slurm-703382.out  slurm-703383.out  slurm-703400.out  slurm-703405.out  slurm-703409.out
experiments/: dump-data-exp1.sh  dump-data-exp2.sh  dump-data.sh  exp1.sh  exp2.sh  exp3.sh  exp4.sh
include/: config.h  cuckooHash.h  cuckooHashCUDA.h  cuckooHashDefault.h  input.h  primeFilter.h  utils.h
src/: baseline.cpp  config.cpp  cuckooHashCUDA.cu  cuckooHashDefault.cpp  dataGenerator.cpp  input.cpp  main.cpp  primeFilter.cpp
tests/: test-config.cpp  test-input-file.cpp
